# theodore

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES.md  Makefile  Makefile.am  Makefile.common  README-FR.md  README-steam.md  README.md  appveyor.yml  configure.ac  makefile  theodore_libretro.info
.github/workflows/: codeql-analysis.yml  compilation.yml  coverity-scan.yml
cheat/: cavernes de thenebe.cht  find_cheat.py  saphir.cht
jni/: Android.mk
libretro/: Makefile  Makefile.am  Makefile.common  keymap.h  libretro.c
libretro-database/: README.md
libretro-database/cht/Thomson - MOTO/: arkanoid.cht  green beret.cht  renegade.cht
libretro-database/scripts/: screenscraper_thomson.py
libretro/jni/: Android.mk
libretro/libretro-common/include/: libretro.h
source/: dc6809dass.c  dc6809dass.h  dc6809emul.c  dcto8ddesass.c  dcto8ddevices.c  dcto8demulation.c  dcto8dglobal.h  dcto8dicon.h  dcto8dinterface.c  dcto8dkeyb.c  dcto8dkeyb.h  dcto8dmain.c  dcto8dmsg.h  dcto8doptions.c  dcto8dvideo.c  to8dmoniteur.h
src/: 6809cpu.c  6809cpu.h  6809disasm.c  6809disasm.h  6809emulator.c  6809emulator.h  autodetect.c  autodetect.h  autostart.c  autostart.h  autostartkeys.h  dc6809dass.c  dc6809dass.h  dc6809emul.c  dc6809emul.h  dcto8ddesass.c  dcto8ddesass.h  dcto8ddevices.c  dcto8ddevices.h  dcto8demulation.c  dcto8demulation.h  dcto8dfont.h  dcto8dglobal.h  dcto8dicon.h  dcto8dinterface.c  dcto8dinterface.h  dcto8dkeyb.c  dcto8dkeyb.h  dcto8dmain.c  dcto8dmain.h  dcto8dmsg.c  dcto8dmsg.h  dcto8doptions.c  dcto8doptions.h  dcto8dvideo.c  dcto8dvideo.h  debugger.c  debugger.h  devices.c  devices.h  (+31 more)
src/libretro-common/include/: libretro.h
src/rom/: README.md  basic-128_memo7.inc  basic-1_memo7.inc  rom_mo5.inc  rom_mo6.inc  rom_pc128.inc  rom_to7.inc  rom_to770.inc  rom_to8.inc  rom_to8d.inc  rom_to9.inc  rom_to9p.inc  to8dmoniteur.h  to8moniteur.h
src/vkeyb/: bmp_keyboard_mo5.inc  bmp_keyboard_mo6.inc  bmp_keyboard_pc128.inc  bmp_keyboard_to7.inc  bmp_keyboard_to770.inc  bmp_keyboard_to8.inc  ui.c  ui.h  vkeyb.c  vkeyb.h  vkeyb_config.c  vkeyb_config.h  vkeyb_layout.c  vkeyb_layout.h
src/vkeyb/tools/: img2c.py
